tests/snapshots/transactions/status/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - status
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TX_ID>

Usage: kermit transactions status <TX_ID>

For more information, try '--help'.
