tests/snapshots/transactions/status/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - status
    - b2dcb7c16a2846a857568547b775db5217f243102285b73a7c1852f4495e7a36
---
success: true
exit_code: 0
----- stdout -----
{
  "type": "TxNotFound"
}

----- stderr -----
