tests/snapshots/transactions/status/not_exists_with_groups.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - status
    - 482784abee65d18a09f457b8125f045580c12bfc462318b3f98337a8c77d2c66
    - "--from-group"
    - "1"
    - "--to-group"
    - "1"
---
success: true
exit_code: 0
----- stdout -----
{
  "type": "TxNotFound"
}

----- stderr -----
